Add mysql container. Install and setup migrations node package

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ APP_ENV='development'
 API_TOKEN='secret-key-here'
 
 BUILD_PATH='dist'
+
+DB_USERNAME='user'
+DB_PASSWORD=''
+DB_ROOTPASSWORD=''
+DB_NAME=''
+DB_HOST='127.0.0.1'
+DB_PORT='3306'
