--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
 version: '3'
 services:
+  db:
+    container_name: bot-db
+    image: mysql:8.0.27
+    restart: always
+    environment:
+      MYSQL_DATABASE: "${DB_NAME}"
+      MYSQL_USER: "${DB_USERNAME}"
+      MYSQL_PASSWORD: "${DB_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${DB_ROOTPASSWORD}"
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
   node: 
     container_name: bot-node
     build: .
+    depends_on:
+      - db
     ports:
       - "8080:8080"
     volumes:
       - .:/code
       - /code/node_modules
+      
+volumes:
+  db_data:
