--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^10.0.0",
+    "mysql2": "^2.3.3",
     "telegraf": "^4.4.2"
   },
   "devDependencies": {
